# xshell

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  shell.sh  your_program.sh
.cache/clangd/index/: main.cpp.5DC51CFDE1EE420A.idx
.codecrafters/: compile.sh
src/: commandhdlr.cpp  commandhdlr.h  env.cpp  env.h  errors.cpp  errors.h  input_handler.cpp  input_handler.h  main.cpp  rcommand.cpp  rcommand.h  utils.cpp  utils.h
src/commands/: handler.cpp  handler.hpp
src/debug/: utils.hpp
src/env/: env.cpp  env.hpp
src/error/: errors.cpp  errors.hpp
src/inputs/: handler.cpp  handler.hpp
src/utils/: utils.cpp  utils.hpp
